@@ -302,6 +302,8 @@ MODULE_SCOPE int CamShift(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const
 MODULE_SCOPE int calcOpticalFlowPyrLK(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int calcOpticalFlowFarneback(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 #ifdef TCL_USE_OPENCV4
+MODULE_SCOPE int readOpticalFlow(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
+MODULE_SCOPE int writeOpticalFlow(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int computeECC(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 #endif
 MODULE_SCOPE int findTransformECC(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
